# SDLGL_Base

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  sdlgl  sdlgl.pro
src/: gl_core_4_5.cpp  main.cpp
